--- a/package.json
+++ b/package.json
@@ -8,16 +8,21 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
-    "sqlite3": "^5.1.6",
-    "bcrypt": "^5.1.0",
-    "body-parser": "^1.20.2"
+    "sqlite3": "^5.1.6"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
   },
-  "keywords": ["node", "express", "sqlite", "login"],
+  "keywords": [
+    "node",
+    "express",
+    "sqlite",
+    "login"
+  ],
   "author": "",
   "license": "ISC"
 }
