--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
-    "sqlite3": "^5.1.6"
+    "roslib": "^1.4.1",
+    "socket.io": "^4.8.1",
+    "sqlite3": "^5.1.6",
+    "ws": "^8.18.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
