--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,139 @@
-package-lock.json
+# 🔒 Archivos a ignorar en Git - Sistema TurtleBot Web Control
+
+# =====================================
+# ARCHIVOS DE NODE.JS
+# =====================================
+
+# Dependencias
 node_modules/
-dist/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Archivos de package managers
+package-lock.json
+yarn.lock
+
+# =====================================
+# ARCHIVOS DE CONFIGURACIÓN
+# =====================================
+
+# Variables de entorno (contienen secretos)
 .env
-*.db
-package.json
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Configuración específica del IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# =====================================
+# BASE DE DATOS
+# =====================================
+
+# Base de datos SQLite (mantener estructura, ignorar datos)
+database.db
+*.db-journal
+
+# Respaldos de base de datos
+*.backup
+*.sql.backup
+
+# =====================================
+# LOGS DEL SISTEMA
+# =====================================
+
+# Archivos de log
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# =====================================
+# ARCHIVOS TEMPORALES
+# =====================================
+
+# Directorios temporales
+tmp/
+temp/
+.tmp/
+
+# Cache
+.cache/
+.npm
+.eslintcache
+
+# =====================================
+# ARCHIVOS DEL SISTEMA OPERATIVO
+# =====================================
+
+# macOS
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Windows
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+$RECYCLE.BIN/
+
+# Linux
+*~
+.fuse_hidden*
+.directory
+.Trash-*
+
+# =====================================
+# ARCHIVOS ESPECÍFICOS DEL PROYECTO
+# =====================================
+
+# Archivos de configuración robot específicos
+robot-config.local.json
+*.robot.backup
+
+# Datos de sesiones persistentes
+sessions/
+
+# Uploads temporales (si se implementan)
+uploads/temp/
+
+# Certificados SSL locales
+*.pem
+*.key
+*.crt
+ssl/
+
+# =====================================
+# IMPORTANTE: MANTENER ESTOS ARCHIVOS
+# =====================================
+
+# ✅ Archivos que SÍ deben incluirse en Git:
+# - README.md
+# - CHANGELOG.md  
+# - RESUMEN_SISTEMA.md
+# - SOLUCION_COMPLETA.md
+# - ACTUALIZACION_BATERIA.md
+# - .env.example (archivo de ejemplo)
+# - package.json ✅ INCLUIDO
+# - server.js
+# - public/ (todo el contenido)
+# - diagnostico_completo.js
+# - test_*.js (scripts de prueba)
+# - icon.ico
+
+# 📝 NOTA: package.json DEBE estar en Git para que otros puedan instalar dependencias
