--- a/package.json
+++ b/package.json
@@ -1,11 +1,16 @@
 {
-  "name": "webapp-login",
+  "name": "turtlebot-web-control",
   "version": "1.0.0",
-  "description": "Webapp básica con login y SQLite",
+  "description": "Sistema completo de control web para robot TurtleBot con integración ROS, monitoreo en tiempo real y gestión multiusuario",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "test:connection": "node diagnostico_completo.js",
+    "test:robot": "node test_movement.js",
+    "test:battery": "node test_battery_kobuki.js",
+    "test:laser": "node test_scan.js",
+    "diagnose": "node diagnostico_completo.js"
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
@@ -21,11 +26,32 @@
     "nodemon": "^3.0.1"
   },
   "keywords": [
-    "node",
+    "turtlebot",
+    "ros",
+    "robot-control",
+    "web-interface",
+    "real-time",
+    "nodejs",
     "express",
     "sqlite",
-    "login"
+    "authentication",
+    "lidar",
+    "camera",
+    "odometry",
+    "rosbridge"
   ],
-  "author": "",
-  "license": "ISC"
+  "author": "ArtTEC",
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/DKNS-JCC/rosweb.git"
+  },
+  "bugs": {
+    "url": "https://github.com/DKNS-JCC/rosweb/issues"
+  },
+  "homepage": "https://github.com/DKNS-JCC/rosweb#readme",
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
+  }
 }
