feat: Implement user profile picture upload and management
- Added multer for handling file uploads and configured storage for profile pictures.
- Created API endpoints for uploading and deleting user profile pictures.
- Updated user model to include profile_picture field.
- Enhanced session management to serve profile pictures.
- Improved user interface with smooth scrolling and mobile navigation setup.
- Added event listeners for tour buttons and user dropdown functionality.
- Adjusted CSS for better layout and spacing.

--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,7 @@ yarn.lock
 # Base de datos SQLite (mantener estructura, ignorar datos)
 database.db
 *.db-journal
+uploads/
 
 # Respaldos de base de datos
 *.backup
