--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "helmet": "^8.1.0",
+    "multer": "^2.0.2",
     "roslib": "^1.4.1",
     "socket.io": "^4.8.1",
     "sqlite3": "^5.1.6",
