--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "express-ws": "^5.0.2",
     "helmet": "^8.1.0",
     "multer": "^2.0.2",
     "roslib": "^1.4.1",
