--- a/package.json
+++ b/package.json
@@ -5,16 +5,13 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",
-    "test:connection": "node diagnostico_completo.js",
-    "test:robot": "node test_movement.js",
-    "test:battery": "node test_battery_kobuki.js",
-    "test:laser": "node test_scan.js",
-    "diagnose": "node diagnostico_completo.js"
+    "dev": "nodemon server.js"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
+    "dotenv": "^17.2.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "express-ws": "^5.0.2",
