--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express-ws": "^5.0.2",
     "helmet": "^8.1.0",
     "multer": "^2.0.2",
+    "nodemailer": "^7.0.5",
     "roslib": "^1.4.1",
     "socket.io": "^4.8.1",
     "sqlite3": "^5.1.6",
